<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".StudDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewCity3"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="Tutor Profile Edit"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="400dp"
                android:layout_height="567dp"
                android:dividerPadding="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCity3">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputName"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/TeditTextName"
                        style="@style/modifiedEditText"
                        android:drawableStart="@drawable/ic_account_circle_24px"
                        android:drawablePadding="10dp"
                        android:hint="Name"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:drawableStart="@drawable/ic_people_black_24dp"
                        android:drawablePadding="10dp"
                        android:layout_width="300dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:text="@string/sGender" />

                    <Spinner
                        android:id="@+id/TspinnerGender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:entries="@array/gender" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputC"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/TeditTextquali"
                        android:drawableStart="@drawable/ic_class_black_24dp"
                        android:drawablePadding="10dp"
                        style="@style/modifiedEditText"
                        android:hint="Qualification"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputSub"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/TeditTextSubject"
                        android:drawableStart="@drawable/ic_subject_black_24dp"
                        android:drawablePadding="10dp"
                        style="@style/modifiedEditText"
                        android:hint="@string/sSubject"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputSch"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/TeditTextMobile"
                        android:drawableStart="@drawable/ic_smartphone_black_24dp"
                        android:drawablePadding="10dp"
                        style="@style/modifiedEditText"
                        android:hint="Mobile"
                        android:inputType="number"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputboa"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/TeditTextEmail"
                        style="@style/modifiedEditText"
                        android:layout_height="56dp"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:drawableStart="@drawable/ic_location_city_black_24dp"
                        android:drawablePadding="10dp"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/selectCity" />

                    <Spinner
                        android:id="@+id/TselectCity"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:entries="@array/city"
                        android:spinnerMode="dialog" />
                </LinearLayout>



            </LinearLayout>

            <Button
                android:id="@+id/buttonSubmitStud"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                android:text="@string/btnNext"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>